Fixed overlapping for description

--- a/Product/product.css
+++ b/Product/product.css
@@ -6,27 +6,32 @@ p.pagetitle{
 }
 
 div.text {
-	height:100px;
-	width:600px;
+	height:200px;
+	width:60%;
 	padding-left:40px;
-	float:left;
+	float:right;
+	display:inline-block;
 }
 
 div.stuff {
 	height:100px;
-	width:600px;
-	padding-right:40px;
-	float:right;
+	width:40%;
+	padding-left:40px;
+	display:inline-block;
 }
 
 div.random {
 	height:100px;
-	width:600;
-	padding-right:50px;
-	padding-top:250px;
-	float:right;
+	width:100%;
+	padding-left:40px;
+	padding-top:30px;
+	display:inline-block;
+	clear:both;
 }
 
 img {
 	padding-left:40px;
+}
+p {
+	font-size:13pt;
 }
