--- a/stylesheet.css
+++ b/stylesheet.css
@@ -58,6 +58,7 @@ div.top{
 	font-family: monospace;
 	font-size: 30px; 
 	margin: auto;
+	box-sizing: border-box;
 }
 div.center{
 	margin: auto;
